force-app/main/default/objects/ReceiptJournal__c/ReceiptJournal__c.object-meta.xml
<CustomObject>
    <label>収受簿</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>収受番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>