force-app/main/default/objects/ReceiptJournal__c/fields/RecordDuplicateString__c.field-meta.xml
<CustomField>
    <fullName>RecordDuplicateString__c</fullName>
    <label>レコード重複判定項目</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>