force-app/main/default/objects/ReceiptJournal__c/fields/StateProgress__c.field-meta.xml
<CustomField>
    <fullName>StateProgress__c</fullName>
    <formula>TEXT( StateProgressManagement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>進捗状況</label>
    <type>Text</type>
</CustomField>