force-app/main/default/objects/ReceiptJournal__c/fields/StateProgressManagement__c.field-meta.xml
<CustomField>
    <fullName>StateProgressManagement__c</fullName>
    <label>進捗状況管理</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateProgressManagementSelectList</valueSetName>
    </valueSet>
</CustomField>