force-app/main/default/objects/ReceiptJournal__c/validationRules/FullNameFormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FullNameFormatValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
 OR( 
  ISBLANK( FullName__c ) ,  
  ISNULL( FullName__c ) ,  
  LEN( TRIM(FullName__c) ) &lt;= 1, 
  CONTAINS(TRIM(FullName__c) , &quot;　&quot; ) 
 ) , 
 False , 
 True
)</errorConditionFormula>
    <errorMessage>氏名の姓と名が全角スペースで区切られていません。</errorMessage>
</ValidationRule>