force-app/main/default/objects/ReceiptJournal__c/validationRules/RubyFormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>RubyFormatValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
 OR( 
  ISBLANK( Ruby__c ) ,  
  ISNULL( Ruby__c ) ,  
  LEN( TRIM(Ruby__c) ) &lt;= 1, 
  CONTAINS(TRIM(Ruby__c) , &quot;　&quot; ) 
 ) , 
 False , 
 True
)</errorConditionFormula>
    <errorMessage>ふりがなの姓と名が全角スペースで区切られていません。</errorMessage>
</ValidationRule>